chore: fix spacing for lists

--- a/src/2025.css
+++ b/src/2025.css
@@ -401,7 +401,7 @@ ul.list__alphabet {
     }
 
     > ul, > ol {
-        padding-left: 0;
+        padding-left: var(--spacing);
     }
 
     hr {
